adjustments and modifications

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="container">
       <div id="profile">
         <img
-          src="./assents/avatar.png"
+          src="./assets/avatar.png"
           alt="Foto michelson roncete usando óculos, sorrindo, barba, camisa vinho fundo luzes embaçadas"
         />
         <p>@michelron7</p>
