--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           src="./assets/avatar.png"
           alt="Foto michelson roncete usando óculos, sorrindo, barba, camisa vinho fundo luzes embaçadas"
         />
-        <p>@michelron7</p>
+        <p>@michelsonron7</p>
       </div>
 
       <div id="switch" onclick="toggleMode()">
@@ -33,12 +33,12 @@
           <a href="#">Curriculum Vitae</a>
         </li>
         <li>
-          <a href="https://github.com/michelsonron7" target="_blank"
+          <a href="https://github.com/michelsonron7/?tab=repositories" target="_blank"
             >Ver meu potifólio</a
           >
         </li>
         <li>
-          <a href="#">Referências</a>
+          <a href="https://www.linkedin.com/in/michelson-roncete/" target="_blank">LinkedIn</a>
         </li>
         <li>
           <a href="#">Baixe meu e-book</a>
@@ -54,8 +54,8 @@
         <a href="https://youtube.com/michelson818181" target="_blank">
         <ion-icon name="logo-youtube"></ion-icon>
         </a>
-        <a href="https://linkedin.com/in/michelson-roncete" target="_blank">
-        <ion-icon name="logo-linkedin"></ion-icon>
+        <a href="https://twitter.com/michelsonron7" target="_blank">
+        <ion-icon name="logo-twitter"></ion-icon>
         </a>
         </div>
         <footer>
