--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <a href="https://www.linkedin.com/in/michelson-roncete/" target="_blank">LinkedIn</a>
         </li>
         <li>
-          <a href="#">Baixe meu e-book</a>
+          <a href="./curriculum/michelson roncete.pdf">Baixe meu e-book</a>
         </li>
       </ul>
       <div id="social-links">
