inserting ebook and CV

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <ul>
         <li>
-          <a href="#">Curriculum Vitae</a>
+          <a href="./curriculum/michelson roncete.pdf" target="_blank">Curriculum Vitae</a>
         </li>
         <li>
           <a href="https://github.com/michelsonron7/?tab=repositories" target="_blank"
@@ -41,7 +41,7 @@
           <a href="https://www.linkedin.com/in/michelson-roncete/" target="_blank">LinkedIn</a>
         </li>
         <li>
-          <a href="./curriculum/michelson roncete.pdf">Baixe meu e-book</a>
+          <a href="./curriculum/E-book.pdf" target="_blank">Baixe meu e-book</a>
         </li>
       </ul>
       <div id="social-links">
