--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <a href="https://www.linkedin.com/in/michelson-roncete/" target="_blank">LinkedIn</a>
         </li>
         <li>
-          <a href="./curriculum/E-book.pdf" target="_blank">Baixe meu e-book</a>
+          <a href="./ebook/E-book.pdf" target="_blank">Baixe meu e-book</a>
         </li>
       </ul>
       <div id="social-links">
@@ -51,8 +51,8 @@
         <a href="https://instagram.com/michelsonron7" target="_blank">
         <ion-icon name="logo-instagram"></ion-icon>
         </a>
-        <a href="https://youtube.com/michelson818181" target="_blank">
-        <ion-icon name="logo-youtube"></ion-icon>
+        <a href="https://https://api.whatsapp.com/send?phone=5521964185007" target="_blank">
+        <ion-icon name="logo-whatsapp"></ion-icon>
         </a>
         <a href="https://twitter.com/michelsonron7" target="_blank">
         <ion-icon name="logo-twitter"></ion-icon>
